--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
-body {
-	background-color: red;
+*,
+*::after,
+*::before {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+nav {
+	padding: 0.5% 1.5% !important;
 }
