--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,42 @@
 	box-sizing: border-box;
 }
 
+body {
+	background-color: #eaf6f6;
+	padding: 0 0.5%;
+	display: flex;
+	min-height: 100vh;
+	flex-direction: column;
+}
+
 .pt-3 {
 	padding-top: 4rem;
+}
+
+h4 {
+	color: grey;
+}
+
+.myclass {
+	display: inline-block;
+	font-size: 1rem;
+	width: auto;
+}
+
+.myclass span {
+	font-size: 0.9rem;
+}
+
+.myclass p {
+	margin-left: 5px;
+}
+
+.myclass p {
+	font-size: 28px;
+}
+
+@media (max-width: 500px) {
+	h3 {
+		font-size: 0.6rem;
+	}
 }
