--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 
 body {
 	background-color: #eaf6f6;
-	padding: 0 0.5%;
+	/* padding: 0 0.5%; */
 	display: flex;
 	min-height: 100vh;
 	flex-direction: column;
