--- a/src/App.css
+++ b/src/App.css
@@ -57,3 +57,10 @@ h4 {
 	background-color: #29b6f6 !important;
 	transition: ease-in-out 0.45s;
 }
+
+.copyright {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	text-align: center;
+}
